# xde-data-switch

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  xde-data-switch.cpp
tests/: CMakeLists.txt  main.cpp
