# 2012 Sovan Hak

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

SET(PROJECT_NAME xde-data-switch)
SET(PROJECT_DESCRIPTION "xde component for data fusion/switch")
SET(PROJECT_URL "Coming soon")

# Required packages
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_LIBRARY(MKLCORE mkl_core HINTS ${MKL_LIBRARIES})

FIND_PACKAGE(Orocos-RTT)
ADD_DEFINITIONS(-DOROCOS_TARGET=gnulinux)

# Defines the orocos_* cmake macros. See that file for additional
# documentation.
include(${OROCOS-RTT_USE_FILE_PATH}/UseOROCOS-RTT.cmake)
PKG_CHECK_MODULES(PC_XDECORE xdecore REQUIRED)

IF(NOT PC_XDECORE_FOUND)
	MESSAGE("Failed to detect XDE Core,	check PKG_CONFIG_PATH." )
ENDIF(NOT PC_XDECORE_FOUND)

PKG_CHECK_MODULES(PC_EIGEN eigen3 REQUIRED)
IF(NOT PC_EIGEN_FOUND)
	MESSAGE("Failed to detect Eigen, check PKG_CONFIG_PATH." )
ENDIF(NOT PC_EIGEN_FOUND)

SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
