SET(LIBR_NAME xde-data-switch)

INCLUDE_DIRECTORIES(${PC_EIGEN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PC_XDECORE_INCLUDE_DIRS})
orocos_component(${LIBR_NAME} xde-data-switch.cpp)
SET_TARGET_PROPERTIES(${LIBR_NAME} PROPERTIES
	LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
TARGET_LINK_LIBRARIES(${LIBR_NAME} ${Orocos-RTT_LIBRARIES} ${PC_XDECORE_LIBRARIES} ${MKLCORE})

INSTALL(TARGETS ${LIBR_NAME} DESTINATION lib)

