SET(EXECUTABLE_NAME xde-data-switch-test)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

ADD_EXECUTABLE(${EXECUTABLE_NAME} main.cpp)

INCLUDE_DIRECTORIES(${PC_EIGEN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PC_XDECORE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${PC_XDECORE_LIBRARIES} ${MKLCORE})

INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
